<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.adam.cawthorn_fueltracker.MainActivity">

    <item
        android:id="@+id/action_add_entry"
        android:orderInCategory="1"
        android:title="@string/action_add_entry"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_add"/>

    <item
        android:id="@+id/action_resetFile"
        android:orderInCategory="2"
        android:title="@string/action_clear_entries" />

    <item
        android:id="@+id/action_sort_entries"
        android:orderInCategory="3"
        android:title="@string/action_sort_data" />

    <item
        android:id="@+id/action_add_sample_data"
        android:orderInCategory="4"
        android:title="@string/action_add_sample_data" />

</menu>
